--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="product-grid">
 
             <div class="product">
-                <img src="shirt.jpg" alt="Cotton T-Shirt">
+                <img src="https://images.unsplash.com/photo-1521572163474-6864f9cf17ab" alt="Cotton T-Shirt">
                 <h3>Cotton T-Shirt</h3>
                 <p>$19.99</p>
                 <button onclick="addToCart('Cotton T-Shirt', 19.99)">
@@ -45,7 +45,7 @@
             </div>
 
             <div class="product">
-                <img src="jeans.jpg" alt="Denim Jeans">
+                <img src="https://images.unsplash.com/photo-1541099649105-f69ad21f3246" alt="Denim Jeans">
                 <h3>Denim Jeans</h3>
                 <p>$49.99</p>
                 <button onclick="addToCart('Denim Jeans', 49.99)">
@@ -54,7 +54,7 @@
             </div>
 
             <div class="product">
-                <img src="jacket.jpg" alt="Leather Jacket">
+                <img src="https://images.unsplash.com/photo-1520975922284-8b456906c813" alt="Leather Jacket">
                 <h3>Leather Jacket</h3>
                 <p>$99.99</p>
                 <button onclick="addToCart('Leather Jacket', 99.99)">
