--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <img src="https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?auto=format&fit=crop&w=600&q=80" alt="T-Shirt">
                 <h3>Premium Cotton T-Shirt</h3>
                 <p>$19.99</p>
-                <button onclick="addToCart('Premium Cotton T-Shirt', 19.99)">Add to Cart</button>
+                <button onclick="addToCart('Premium KUSAL T-Shirt', 19.99)">Add to Cart</button>
             </div>
 
             <div class="product">
